# llm-yu-gi-oh

./: dataset.py  main.py  pyproject.toml  tokenizer.py
data/processed/yugioh/v001/: all.txt  val.txt
scripts/: build_tokenizer.py  create_dataset.py
